# hotspot-slicer

./: README  README.md  demo.sh  demo_stop.sh  hostapd-ch40.conf  hostapd-multi-ssid.conf  hostapd-wlan1.conf  local_radio_slicer.py  prepare.sh  rx.sh  start_hmac_ap.sh  start_iperf_clients.sh  start_wpa_supplicant.sh  start_wpa_supplicant_guest.sh  start_wpa_supplicant_guest1.sh  start_wpa_supplicant_guest2.sh  start_wpa_supplicant_home.sh  start_wpa_supplicant_radio.sh  start_wpa_supplicant_tablet.sh  start_wpa_supplicant_tv.sh  tx.sh  wpa_supplicant.conf  wpa_supplicant_guest.conf  wpa_supplicant_home.conf
apps/discovery_pyre/: README.md  setup.py
apps/iperf/: README.md  setup.py
apps/wireless_topology/: README.md  setup.py
examples/: README.md
examples/chan_sound/: chsounder.py  config_chs.yaml  config_wifi.yaml  inject.sh  sniff.sh  start_slave.sh
examples/gnuradio/: config_local.yaml  local_control_app.py  testgrc.grc
examples/handover2/: ap_control_programs.py  bigap_control_program.py  common.py  config_ap.yaml  config_gw.yaml  config_master.yaml  readme.md
examples/handover2/scanner/: CMakeLists.txt  README  scanner  start_scanner.cpp
examples/hybrid_mac/: config_local.yaml  local_hmac_ex.py  readme.md
examples/iperf/: config_local.yaml  local_control_app.py  run.sh
examples/mininet/: ap1_config.yaml  ap2_config.yaml  controller_config.yaml  mininet_script.py  readme.md  run.sh  uniflex_mn_controller.py
examples/net/: config_local.yaml  local_control_app.py
examples/node_red/: common.py  my_filter.json  (+4 more)
node-red/: README.md  package.json
(+127 files in other folders)
